# geron-hands-on-ml

./: .gitignore  chapter11-deep-nn.ipynb  cp10-pytorch.py  fashion_mnist.pt  fashion_mnist_model.pt  main.py  pyproject.toml
Chapter-10/: cp10-pytorch.ipynb  cp10-pytorch.py
Chapter-10/weights/: fashion_mnist_weights.pt
