[project]
name = "geron-hands-on-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.23.8",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
]
